# analiticcl

./: .gitignore  Cargo.toml  README.md  analiticcl.pyi  performance.md  tutorial.ipynb
.github/workflows/: analiticcl.yml  wheels.yml
benches/: benchmarks.rs
bindings/python/: .gitignore  Cargo.toml  README.md  build-wheels.sh  pyproject.toml  setup.py
bindings/python/analiticcl/: __init__.py
bindings/python/examples/: example.py
bindings/python/src/: lib.rs
bindings/python/tests/: amphibians.tsv  groundtruth.tok.lexicon.tsv  reptiles.tsv  simple.alphabet.tsv  tests.py
docs/pres_20220120/: Makefile  analiticcl_presentation.md
example/: eng.aspell.lexicon  simple.alphabet.tsv
examples/: nld.aspell.lexicon
src/: anahash.rs  cache.rs  confusables.rs  distance.rs  index.rs  iterators.rs  lib.rs  main.rs  search.rs  test.rs  threading.rs  types.rs  vocab.rs
tests/: main.rs
