[package]
authors = ["Maarten van Gompel <proycon@anaproy.nl>"]
description = "Analiticcl is an approximate string matching or fuzzy-matching system that can be used to find variants for spelling correction or text normalisation"
documentation = "https://docs.rs/analiticcl"
edition = "2018"
homepage = "https://github.com/proycon/analiticcl"
include = ["src/**/*", "LICENSE", "README.md"]
keywords = ["nlp", "text-processing", "spelling-correction", "linguistics", "spellcheck"]
license = "GPL-3.0+"
name = "analiticcl"
readme = "README.md"
repository = "https://github.com/proycon/analiticcl"
version = "0.3.4"

[[bench]]
harness = false
path = "benches/benchmarks.rs"
name = "benchmarks"

[dependencies]
bitflags = "1.3.2"
clap = "2.33.3"
ibig = "0.3.2"
num-traits = "0.2.14"
rayon = "1.5.1"
rustfst = "0.8.1"
sesdiff = "0.3.0"
simple-error = "0.2.3"

[dev-dependencies]
criterion = "0.3.5"
