[package]
authors = ["Maarten van Gompel <proycon@anaproy.nl>"]
description = "Analiticcl is an approximate string matching or fuzzy-matching system that can be used to find variants for spelling correction or text normalisation"
documentation = "https://docs.rs/analiticcl"
edition = "2018"
homepage = "https://github.com/proycon/analiticcl"
keywords = ["nlp", "text-processing", "spelling-correction", "linguistics", "spellcheck"]
license = "GPL-3.0+"
name = "analiticcl-python"
readme = "README.md"
repository = "https://github.com/proycon/analiticcl"
version = "0.3.3" #also change version in dependencies below

[lib]
name = "analiticcl"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.13.2"
rayon = "1.5.0"
analiticcl = "0.3.3"

#compile against version in same repo: (doesn't work when building with maturin for pypi)
#[dependencies.analiticcl]
#version = "*"
#path ="../../"

[features]
default = ["pyo3/extension-module"]

[target.x86_64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]

[target.aarch64-apple-darwin]
rustflags = [
  "-C", "link-arg=-undefined",
  "-C", "link-arg=dynamic_lookup",
]
